test/files/neg/t11952b.check
t11952b.scala:9: error: cannot override final member:
final def f: String (defined in class C)
  override def f: Int = 42
               ^
1 error
